--- a/.github/workflows/windows_dml.yml
+++ b/.github/workflows/windows_dml.yml
@@ -25,7 +25,7 @@ jobs:
       ALLOW_RELEASED_ONNX_OPSET_ONLY: '0'
       DocUpdateNeeded: false
       ONNXRUNTIME_TEST_GPU_DEVICE_ID: '0'
-    runs-on: ["self-hosted", "1ES.Pool=onnxruntime-github-Win2022-GPU-A10"]
+    runs-on: "windows-latest"
     steps:
       - uses: actions/checkout@v5
         with:
@@ -91,7 +91,22 @@ jobs:
       - name: Build and Test
         working-directory: ${{ runner.temp }}
         run: |
-          python.exe ${{ github.workspace }}\tools\ci_build\build.py --config RelWithDebInfo --build_dir build --skip_submodule_sync --build_csharp --parallel  --use_binskim_compliant_compile_flags --cmake_generator "Visual Studio 17 2022" --build_shared_lib --skip_onnx_tests --build_wheel --use_dml --enable_wcos --use_vcpkg --use_vcpkg_ms_internal_asset_cache
+          python.exe ${{ github.workspace }}\tools\ci_build\build.py \
+            --config RelWithDebInfo \
+            --build_dir build \
+            --skip_submodule_sync \
+            --build_csharp \
+            --parallel \
+            --use_binskim_compliant_compile_flags \
+            --cmake_generator "Visual Studio 17 2022" \
+            --build_shared_lib \
+            --skip_onnx_tests \
+            --build_wheel \
+            --use_dml \
+            --enable_wcos \
+            --use_vcpkg \
+            --use_vcpkg_ms_internal_asset_cache \
+            --cmake_extra_defines onnxruntime_ENABLE_NPU_ADAPTER_ENUMERATION=1
           if ($lastExitCode -ne 0) {
             exit $lastExitCode
           }
@@ -107,3 +122,12 @@ jobs:
         uses: ./.github/actions/install-onnxruntime-wheel
         with:
           whl-directory: ${{ runner.temp }}\build\RelWithDebInfo\RelWithDebInfo\dist
+
+      - name: Upload ONNX Runtime Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: onnxruntime-dml-windows-x64
+          path: |
+            ${{ runner.temp }}/build/RelWithDebInfo/RelWithDebInfo/include
+            ${{ runner.temp }}/build/RelWithDebInfo/RelWithDebInfo/lib
+          retention-days: 30
