feat: upload all build results

--- a/.github/workflows/windows_dml.yml
+++ b/.github/workflows/windows_dml.yml
@@ -124,6 +124,5 @@ jobs:
         with:
           name: onnxruntime-dml-windows-x64
           path: |
-            ${{ runner.temp }}/build/RelWithDebInfo/RelWithDebInfo/include
-            ${{ runner.temp }}/build/RelWithDebInfo/RelWithDebInfo/lib
+            ${{ runner.temp }}/build
           retention-days: 30
