--- a/.github/workflows/windows_dml.yml
+++ b/.github/workflows/windows_dml.yml
@@ -92,9 +92,6 @@ jobs:
             --build_shared_lib `
             --skip_onnx_tests `
             --skip_tests `
-            --skip_nodejs_tests `
-            --skip_keras_test `
-            --skip_winml_tests `
             --build_wheel `
             --msbuild_extra_options "IncludeMobileTargets=false" `
             --use_dml `
@@ -102,7 +99,28 @@ jobs:
             --build_nuget `
             --use_vcpkg `
             --use_vcpkg_ms_internal_asset_cache `
-            --cmake_extra_defines onnxruntime_ENABLE_NPU_ADAPTER_ENUMERATION=1
+            --cmake_extra_defines onnxruntime_ENABLE_NPU_ADAPTER_ENUMERATION=1 `
+            --update
+          python.exe ${{ github.workspace }}\tools\ci_build\build.py `
+            --config RelWithDebInfo `
+            --build_dir build `
+            --skip_submodule_sync `
+            --build_csharp `
+            --parallel `
+            --use_binskim_compliant_compile_flags `
+            --cmake_generator "Visual Studio 17 2022" `
+            --build_shared_lib `
+            --skip_onnx_tests `
+            --skip_tests `
+            --build_wheel `
+            --msbuild_extra_options "IncludeMobileTargets=false" `
+            --use_dml `
+            --enable_wcos `
+            --build_nuget `
+            --use_vcpkg `
+            --use_vcpkg_ms_internal_asset_cache `
+            --cmake_extra_defines onnxruntime_ENABLE_NPU_ADAPTER_ENUMERATION=1 `
+            --build
           if ($lastExitCode -ne 0) {
             exit $lastExitCode
           }
